# ftx-telegram-rss

./: .env  .gitignore  CHANGELOG.md  README.md  pyproject.toml
ftx_telegram_rss/: __init__.py
tests/: test_ftx_telegram_rss.py
